# ml-registry

./: 404.html  README.md  asdasd.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-CD.yml  python-app.yml  python-publish.yml
accessors/: index.html
docs/: accessors.md  index.md  registry.md
examples/: simple.py
mlregistry/: accessors.py  core.py  functional.py  metadata.py  registry.py
registry/: index.html
tests/: test_core.py  test_func.py  test_nested.py  test_registry.py
