[tool.poetry]
name = "ml-registry"
version = "0.1.0"
description = "Register, retrieve and get metada from machine learning models."
authors = ["mr-raccoon-97 <eric.m.cardozo@mi.unc.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
